NXP-9100: Try using ProcessBuilder instead of Runtime.exec